--- a/pages/19620.html
+++ b/pages/19620.html
@@ -308,179 +308,198 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
 
-<h4 id='foundations'>Foundations</h4>
+<h4 id="foundations">Foundations</h4>
 
-<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/foundations'>foundations</a></strong></p><h2 id='the_basis_of_it_all'>The basis of it all</h2><ul>
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/foundations">foundations</a></strong></p><h2 id="the_basis_of_it_all">The basis of it all</h2><ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/mathematical+logic'>mathematical logic</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/mathematical+logic">mathematical logic</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/first-order+logic'>first-order logic</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/first-order+logic">first-order logic</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/set+theory">set theory</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/material+set+theory">material set theory</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/ZFC'>ZFC</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/ZFC">ZFC</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/ZFA'>ZFA</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/ZFA">ZFA</a></li>
 </ul>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/structural+set+theory'>structural set theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/structural+set+theory">structural set theory</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/ETCS'>ETCS</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/ETCS">ETCS</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/SEAR'>SEAR</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/SEAR">SEAR</a></li>
 </ul>
 </li>
 </ul>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/universe'>universe</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/universe">universe</a></p>
 </li>
-</ul><h2 id='foundational_axioms'>Foundational axioms</h2><p><strong><a class='existingWikiWord' href='/nlab/show/foundational+axiom'>foundational axiom</a></strong></p><ul></ul><li>
+</ul><h2 id="foundational_axioms">Foundational axioms</h2><p><strong></strong></p><ul>
+<li>
 <p>basic constructions:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+cartesian+products'>axiom of cartesian products</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+disjoint+unions'>axiom of disjoint unions</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+the+empty+set'>axiom of the empty set</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+fullness'>axiom of fullness</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+function+sets'>axiom of function sets</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+power+sets'>axiom of power sets</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+quotient+sets'>axiom of quotient sets</a></li>
+<li></li>
 </ul>
-</li><li>
-<p><a class='existingWikiWord' href='/nlab/show/material+set+theory'>material axioms</a>:</p>
+</li>
+
+<li>
+<p>:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+extensionality'>axiom of extensionality</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+foundation'>axiom of foundation</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Mostowski%27s+axiom'>Mostowski&#39;s axiom</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+pairing'>axiom of pairing</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+transitive+closure'>axiom of transitive closure</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+union'>axiom of union</a></li>
+<li></li>
 </ul>
-</li><li>
-<p><a class='existingWikiWord' href='/nlab/show/axioms+of+choice'>axioms of choice</a>:</p>
+</li>
+
+<li>
+<p>:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+countable+choice'>axiom of countable choice</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+dependent+choice'>axiom of dependent choice</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+excluded+middle'>axiom of excluded middle</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+existence'>axiom of existence</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+multiple+choice'>axiom of multiple choice</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Markov%27s+axiom'>Markov&#39;s axiom</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/presentation+axiom'>presentation axiom</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/small+cardinality+selection+axiom'>small cardinality selection axiom</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+small+violations+of+choice'>axiom of small violations of choice</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+weakly+initial+sets+of+covers'>axiom of weakly initial sets of covers</a></li>
+<li></li>
 </ul>
-</li><li>
-<p><a class='existingWikiWord' href='/nlab/show/Whitehead%27s+principle'>Whitehead&#39;s principle</a></p>
-</li><li>
-<p><a class='existingWikiWord' href='/nlab/show/large+cardinal+axioms'>large cardinal axioms</a>:</p>
+</li>
+
+<li>
+<p></p>
+</li>
+
+<li>
+<p>:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+infinity'>axiom of infinity</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+universes'>axiom of universes</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/regular+extension+axiom'>regular extension axiom</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/inaccessible+cardinal'>inaccessible cardinal</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/measurable+cardinal'>measurable cardinal</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/elementary+embedding'>elementary embedding</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/supercompact+cardinal'>supercompact cardinal</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Vop%C4%9Bnka%27s+principle'>Vopěnka&#39;s principle</a></li>
+<li></li>
 </ul>
-</li><li>
+</li>
+
+<li>
 <p>strong axioms</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+separation'>axiom of separation</a></li>
+<li></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/axiom+of+replacement'>axiom of replacement</a></li>
+<li></li>
 </ul>
-</li><li>
+</li>
+
+<li>
 <p>further</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/reflection+principle'>reflection principle</a></li>
+<li></li>
 </ul>
-</li><h2 id='removing_axioms'>Removing axioms</h2><ul>
-<li><a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a></li>
+</li>
+</ul><h2 id="removing_axioms">Removing axioms</h2><ul>
+<li><a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/predicative+mathematics'>predicative mathematics</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/predicative+mathematics">predicative mathematics</a></li>
 </ul><div>
 <p>
-  <a href='/nlab/edit/foundations+-+contents'>Edit this sidebar</a>
+  <a href="/nlab/edit/foundations+-+contents">Edit this sidebar</a>
 </p>
 </div></div>
 </div>
 </div>
-<div class='maruku_toc'>
-</div>
+<div class="maruku_toc"><ul></ul></div>
+<p><strong>Ex falso quodlibet</strong> is Latin for “from falsehood, anything”. It is also called the <strong>principle of explosion</strong>. In <a class="existingWikiWord" href="/nlab/show/logic">logic</a> it refers to the principle that when a contradiction can be derived in a system, then any proposition follows. In <a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a> it is the <a class="existingWikiWord" href="/nlab/show/elimination+rule">elimination rule</a> of the <a class="existingWikiWord" href="/nlab/show/empty+type">empty type</a>.</p>
 
-<p><strong>Ex falso quodlibet</strong> is Latin for “from falsehood, anything”. It is also called the <strong>principle of explosion</strong>. In <a class='existingWikiWord' href='/nlab/show/logic'>logic</a> it refers to the principle that when a contradiction can be derived in a system, then any proposition follows. It holds in many logics, such as <a class='existingWikiWord' href='/nlab/show/classical+logic'>classical logic</a> and <a class='existingWikiWord' href='/nlab/show/intuitionistic+logic'>intuitionistic logic</a>, but it fails to hold in <a class='existingWikiWord' href='/nlab/show/paraconsistent+logic'>paraconsistent logic</a>, which was devised to allow controlled inconsistency.</p>
+<p><em>Ex falso quodlibet</em> holds in many logics, such as <a class="existingWikiWord" href="/nlab/show/classical+logic">classical logic</a> and <a class="existingWikiWord" href="/nlab/show/intuitionistic+logic">intuitionistic logic</a>, but it fails to hold in <a class="existingWikiWord" href="/nlab/show/paraconsistent+logic">paraconsistent logic</a>, which was devised to allow controlled inconsistency.</p>
 
 <p>Variants of the principle’s name include <em>ex falso sequitur quodlibet</em>, “from falsehood, anything follows”, and <em>ex contradictione (sequitur) quodlibet</em>, “from contradiction, anything (follows)”).</p>
+</body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Created on August 27, 2018 at 02:36:08.
+  Last revised on September  7, 2018 at 01:59:50.
   See the <a href="https://ncatlab.org/nlab/history/ex falso quodlibet" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ex+falso+quodlibet" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/ex+falso+quodlibet" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ex+falso+quodlibet/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/ex+falso+quodlibet" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ex+falso+quodlibet" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/ex falso quodlibet/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
