--- a/pages/269.html
+++ b/pages/269.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7060/#Item_17" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7060/#Item_20" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -315,7 +315,7 @@ margin-left: 0em;
 <h1 id='section_table_of_contents'>Contents</h1>
 <div class='maruku_toc'>
 <ul>
-<li><a href='#definition'>Definition</a></li>
+<li><a href='#section_Definition'>Definition</a></li>
 <li><a href='#monoidal_structure'>Monoidal structure</a></li>
 <li><a href='#notation'>Notation</a></li>
 <ul>
@@ -329,13 +329,11 @@ margin-left: 0em;
 </ul>
 </div>
 
-
-<h2 id="definition">Definition</h2>
-
+<h2 id="section_Definition">Definition</h2>
 <p>
 <div class='num_defn'>
 <h6>Notation</h6>
-<p>We make use of the notation of [[category of cubes]].</p>
+<p>We make use of the notation of <a class="existingWikiWord" href="/nlab/show/category+of+cubes">category of cubes</a>.</p>
 
 <p></p>
 </div>
@@ -344,7 +342,7 @@ margin-left: 0em;
 <p>
 <div class='num_defn'>
 <h6>Definition</h6>
-<p>The <em>category of cubical sets</em> is the [[free co-completion]] of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>□</mo></mrow><annotation encoding="application/x-tex">\square</annotation></semantics></math>, the category of cubes.</p>
+<p>The <em>category of cubical sets</em> is the <a class="existingWikiWord" href="/nlab/show/free+co-completion">free co-completion</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>□</mo></mrow><annotation encoding="application/x-tex">\square</annotation></semantics></math>, the category of cubes.</p>
 
 <p></p>
 </div>
@@ -353,7 +351,7 @@ margin-left: 0em;
 <p>
 <div class='num_remark'>
 <h6>Remark</h6>
-<p>The free co-completion of a small category can be constructed as the category of [[presheaf | presheaves]] of sets on this category. Thus we can also think of the category of cubical sets as the category of presheaves of sets on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>□</mo></mrow><annotation encoding="application/x-tex">\square</annotation></semantics></math>.</p>
+<p>The free co-completion of a small category can be constructed as the category of <a class="existingWikiWord" href="/nlab/show/presheaf"> presheaves</a> of sets on this category. Thus we can also think of the category of cubical sets as the category of presheaves of sets on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>□</mo></mrow><annotation encoding="application/x-tex">\square</annotation></semantics></math>.</p>
 
 <p></p>
 </div>
@@ -387,14 +385,14 @@ margin-left: 0em;
 </p>
 
 <div class="num_defn">
-<h6 id="definition_2">Definition</h6>
+<h6 id="definition">Definition</h6>
 
 <p>A <em>morphism</em> of cubical sets is an arrow of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mstyle mathvariant="sans-serif"><mi>Set</mi></mstyle> <mrow><msup><mo>□</mo> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding="application/x-tex">\mathsf{Set}^{\square^{op}}</annotation></semantics></math>.</p>
 </div>
 
 <h2 id="monoidal_structure">Monoidal structure</h2>
 
-<p>The strict monoidal structure of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>□</mo></mrow><annotation encoding="application/x-tex">\square</annotation></semantics></math> gives rise to a (non-strict) monoidal structure on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mstyle mathvariant="sans-serif"><mi>Set</mi></mstyle> <mrow><msup><mo>□</mo> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding="application/x-tex">\mathsf{Set}^{\square^{op}}</annotation></semantics></math>, by <a class="existingWikiWord" href="/nlab/show/Day+convolution">Day convolution</a>. The unit of the monoidal structure is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mo>□</mo> <mn>0</mn></msup></mrow><annotation encoding="application/x-tex">\square^{0}</annotation></semantics></math>, in the notation of Notation <a class="maruku-ref" href="#NotationFreeStandingNCube"></a>. Whenever we use the symbol <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⊗</mo></mrow><annotation encoding="application/x-tex">\otimes</annotation></semantics></math> when working with cubical sets or morphisms of cubical sets, we shalll always refer to the functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>⊗</mo><mo lspace="verythinmathspace" rspace="0em">−</mo></mrow><annotation encoding="application/x-tex">- \otimes -</annotation></semantics></math> of this monoidal structure.</p>
+<p>The strict monoidal structure of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>□</mo></mrow><annotation encoding="application/x-tex">\square</annotation></semantics></math> gives rise to a (non-strict) monoidal structure on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mstyle mathvariant="sans-serif"><mi>Set</mi></mstyle> <mrow><msup><mo>□</mo> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding="application/x-tex">\mathsf{Set}^{\square^{op}}</annotation></semantics></math>, by <a class="existingWikiWord" href="/nlab/show/Day+convolution">Day convolution</a>. The unit of the monoidal structure is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mo>□</mo> <mn>0</mn></msup></mrow><annotation encoding="application/x-tex">\square^{0}</annotation></semantics></math>, in the notation of Notation <a class="maruku-ref" href="#NotationFreeStandingNCube"></a>. Whenever we use the symbol <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⊗</mo></mrow><annotation encoding="application/x-tex">\otimes</annotation></semantics></math> when working with cubical sets or morphisms of cubical sets, we shall always refer to the functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>⊗</mo><mo lspace="verythinmathspace" rspace="0em">−</mo></mrow><annotation encoding="application/x-tex">- \otimes -</annotation></semantics></math> of this monoidal structure.</p>
 
 <h2 id="notation">Notation</h2>
 
@@ -580,14 +578,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  6, 2018 at 16:28:50.
+  Last revised on September  7, 2018 at 01:25:35.
   See the <a href="https://ncatlab.org/nlab/history/cubical set" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cubical+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+set/75" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(75 revisions)</span> | <a href="/nlab/show/diff/cubical+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cubical+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+set/76" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(76 revisions)</span> | <a href="/nlab/show/diff/cubical+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cubical set/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
