--- a/pages/5634.html
+++ b/pages/5634.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -895,10 +895,16 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Kiyonori+Gomi">Kiyonori Gomi</a>, Yuji Terashima, <em>Discrete Torsion Phases as Topological Actions</em>, Commun. Math. Phys. (2009) 287: 889 (<a href="https://doi.org/10.1007/s00220-009-0736-1">doi:10.1007/s00220-009-0736-1</a>)</li>
+</ul>
+
 <p>The case of <a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a> is discussed in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Eric+Sharpe">Eric Sharpe</a><em>Discrete Torsion in Perturbative Heterotic String Theory</em>, Phys.Rev. D68 (2003) 126005 (<a href="https://arxiv.org/abs/hep-th/0008184">arXiv:hep-th/0008184</a>)</li>
+<li><a class="existingWikiWord" href="/nlab/show/Eric+Sharpe">Eric Sharpe</a>, <em>Discrete Torsion in Perturbative Heterotic String Theory</em>, Phys.Rev. D68 (2003) 126005 (<a href="https://arxiv.org/abs/hep-th/0008184">arXiv:hep-th/0008184</a>)</li>
 </ul>
 
 <h3 id="for_the_cfield">For the C-field</h3>
@@ -913,12 +919,22 @@ margin-left: 0em;
 <li>
 <p>Shigenori Seki, <em>Discrete Torsion and Branes in M-theory from Mathematical Viewpoint</em>, Nucl.Phys. B606 (2001) 689-698 (<a href="https://arxiv.org/abs/hep-th/0103117">arXiv:hep-th/0103117</a>)</p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Jan+de+Boer">Jan de Boer</a>, <a class="existingWikiWord" href="/nlab/show/Robbert+Dijkgraaf">Robbert Dijkgraaf</a>, <a class="existingWikiWord" href="/nlab/show/Kentaro+Hori">Kentaro Hori</a>, <a class="existingWikiWord" href="/nlab/show/Arjan+Keurentjes">Arjan Keurentjes</a>, <a class="existingWikiWord" href="/nlab/show/John+Morgan">John Morgan</a>, <a class="existingWikiWord" href="/nlab/show/David+Morrison">David Morrison</a>, <a class="existingWikiWord" href="/nlab/show/Savdeep+Sethi">Savdeep Sethi</a>, section 4.6.2 of <em>Triples, Fluxes, and Strings</em>, Adv.Theor.Math.Phys. 4 (2002) 995-1186 (<a href="https://arxiv.org/abs/hep-th/0103170">arXiv:hep-th/0103170</a>)</p>
+</li>
 </ul>
 
 <p>and applied to discussion of <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/M2-brane">M2-brane</a> <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> <a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a> (<a class="existingWikiWord" href="/nlab/show/ABJM+model">ABJM model</a>) in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Ofer+Aharony">Ofer Aharony</a>, Oren Bergman, Daniel Louis Jafferis, <em>Fractional M2-branes</em>, JHEP 0811:043,2008 (<a href="https://arxiv.org/abs/0807.4924">arXiv:0807.4924</a>)</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Ofer+Aharony">Ofer Aharony</a>, Oren Bergman, Daniel Louis Jafferis, <em>Fractional M2-branes</em>, JHEP 0811:043,2008 (<a href="https://arxiv.org/abs/0807.4924">arXiv:0807.4924</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Mauricio+Romo">Mauricio Romo</a>, <em>Aspects of ABJM orbifolds with discrete torsion</em>, J. High Energ. Phys. (2011) 2011 (<a href="https://arxiv.org/abs/1011.4733">arXiv:1011.4733</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -926,14 +942,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  9, 2018 at 03:38:34.
+  Last revised on September  9, 2018 at 04:59:08.
   See the <a href="https://ncatlab.org/nlab/history/discrete torsion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/discrete+torsion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/discrete+torsion/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/discrete+torsion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/discrete+torsion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/discrete+torsion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/discrete+torsion/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/discrete+torsion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/discrete+torsion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/discrete torsion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
