--- a/pages/6683.html
+++ b/pages/6683.html
@@ -940,6 +940,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>More on the role of <a class="existingWikiWord" href="/nlab/show/discrete+torsion">discrete torsion</a> in the <a class="existingWikiWord" href="/nlab/show/supergravity+C-field">supergravity C-field</a> is in</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Mauricio+Romo">Mauricio Romo</a>, <em>Aspects of ABJM orbifolds with discrete torsion</em>, J. High Energ. Phys. (2011) 2011 (<a href="https://arxiv.org/abs/1011.4733">arXiv:1011.4733</a>)</li>
+</ul>
+
 <p>Discussion of <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> leading to <a class="existingWikiWord" href="/nlab/show/brane+intersection">brane intersection</a> laws with the <a class="existingWikiWord" href="/nlab/show/M-wave">M-wave</a>, <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/M5-brane">M5-brane</a> and <a class="existingWikiWord" href="/nlab/show/MO9">MO9</a> is in</p>
 
 <ul>
@@ -1047,14 +1053,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  9, 2018 at 03:46:38.
+  Last revised on September  9, 2018 at 04:27:55.
   See the <a href="https://ncatlab.org/nlab/history/ABJM theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ABJM+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ABJM+theory/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/ABJM+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ABJM+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/ABJM+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ABJM+theory/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/ABJM+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ABJM+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/ABJM theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
