--- a/pages/6735.html
+++ b/pages/6735.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -700,7 +700,7 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Andreas+Gustavsson">Andreas Gustavsson</a>, Nucl. Phys. B811, 66-76 (2009). [arXiv:0709.1260].</li>
 </ul>
 
-<p>The interpretation in terms of branes at a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathbb{Z}/2</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/ADE-singularities">ADE-singularities</a> is due to</p>
+<p>The interpretation in terms of branes at a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathbb{Z}/2</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/ADE-singularities">ADE-singularities</a> with <a class="existingWikiWord" href="/nlab/show/discrete+torsion">discrete torsion</a> in the <a class="existingWikiWord" href="/nlab/show/supergravity+C-field">supergravity C-field</a> is due to</p>
 
 <ul>
 <li>
@@ -765,7 +765,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  9, 2018 at 13:57:52.
+  Last revised on September  9, 2018 at 14:00:26.
   See the <a href="https://ncatlab.org/nlab/history/BLG model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
